--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
     <!-- Three columns of text below the carousel -->
     <div id="main-title">
       <i class="fa-solid fa-star"></i>
-      <h1 > Productos bandera de la marca</h1>
+      <h1 > Productos bandera</h1>
       <i class="fa-solid fa-star"></i>
     </div>
-    
+
     <div class="row">
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
