--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
 
     
 <header data-bs-theme="dark">
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" id="navpage">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Carousel</a>
+      <img src="./assets/imgs/logo-donofrio.png" alt="" style="width: 200px;">
+      <!--<a class="navbar-brand" href="#">Carousel</a>-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
