--- a/index.html
+++ b/index.html
@@ -244,29 +244,29 @@
 
     <!-- Three columns of text below the carousel -->
     <div id="main-title">
-      <i class="fa-solid fa-star"></i>
-      <h1 > Productos bandera</h1>
-      <i class="fa-solid fa-star"></i>
+      <h1 > Los orígenes del panetón</h1>
     </div>
 
     <div class="row">
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p class="p-content">Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <img class="cicular-image-1" src="./assets/imgs/Circle-paneton-3.jpg" alt="">
+        <!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
+        <h2 class="fw-normal">Origen</h2>
+        <p class="p-content">El panetón nación en la corte del Duque de Milán en 1494.</p>
+        <p><a class="btn btn-secondary" href="#">Conoce más &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p class="p-content">Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <svg class="bd-placeholder-img rounded-circle cicular-image-2" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><!--<rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>--></svg>
+        <h2 class="fw-normal">Anécdota</h2>
+        <p class="p-content">Una Noche Buena, el postre preparado para el banquete del Duque se quemó en el horno.</p>
+        <p><a class="btn btn-secondary" href="#">Conoce más &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p class="p-content">And lastly this, the third column of representative placeholder content.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <img class="cicular-image-3" src="./assets/imgs/Circle-paneton-1.jpg" alt="">
+        <!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
+        <h2 class="fw-normal">Nacimiento</h2>
+        <p class="p-content">Un cocinero improvisó un pan dulce al cual se le llamó "Panne de Tonni" de donde proviene el nombre Panetón.</p>
+        <p><a class="btn btn-secondary" href="#">Conoce más &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
