--- a/index.html
+++ b/index.html
@@ -316,12 +316,16 @@
   </div><!-- /.container -->
 
 
-  <!-- FOOTER -->
-  <footer class="container">
-    <p class="float-end"><a href="#">Back to top</a></p>
-    <p class="p-footer">&copy; 2017–2023 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-  </footer>
 </main>
+
+  <!-- FOOTER -->
+  <div class="footer-container">
+    <footer class="container">
+      <p class="float-end"><a href="#">Back to top</a></p>
+      <p class="p-footer">&copy; 2017–2023 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    </footer>
+  </div>
+
 <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
 
 
