--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
   <div class="footer-container">
     <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
-      <p class="p-footer">&copy; 2017–2023 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      <p class="p-footer">&copy; 2017–2023 Company, Inc. &middot; <a href="#" class="enlace-footer">Privacy</a> &middot; <a href="#" class="enlace-footer">Terms</a></p>
     </footer>
   </div>
 
