--- a/index.html
+++ b/index.html
@@ -167,18 +167,18 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link enlace-header-1"   aria-current="page" href="#">Categorías</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link enlace-header-1" href="#">Historia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <a class="nav-link  enlace-header-1" aria-disabled="true">Pedidos</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="btn btn-outline-success boton-tipo-3" type="submit">Search</button>
         </form>
       </div>
     </div>
@@ -200,7 +200,7 @@
           <div class="carousel-caption text-start">
             <h1>Example headline.</h1>
             <p class="p-carousel">Some representative placeholder content for the first slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+            <p><a class="btn btn-lg btn-primary boton-tipo-1" href="#">Sign up today</a></p>
           </div>
         </div>
       </div>
@@ -210,7 +210,7 @@
           <div class="carousel-caption text-start">
             <h1>Another example headline.</h1>
             <p class="p-carousel">Some representative placeholder content for the second slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+            <p><a class="btn btn-lg btn-primary boton-tipo-1" href="#">Learn more</a></p>
           </div>
         </div>
       </div>
@@ -220,7 +220,7 @@
           <div class="carousel-caption text-start">
             <h1>One more for good measure.</h1>
             <p class="p-carousel">Some representative placeholder content for the third slide of this carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+            <p><a class="btn btn-lg btn-primary boton-tipo-1" href="#">Browse gallery</a></p>
           </div>
         </div>
       </div>
@@ -249,24 +249,24 @@
 
     <div class="row">
       <div class="col-lg-4">
-        <img class="cicular-image-1" src="./assets/imgs/Circle-paneton-3.jpg" alt="">
-        <!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
+        <a href="#" class="enlace-img-products"><img class="cicular-image-1 " src="./assets/imgs/Circle-paneton-3.jpg" alt="">
+          <!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>--></a>
         <h2 class="fw-normal">Origen</h2>
         <p class="p-content">El panetón nación en la corte del Duque de Milán en 1494.</p>
-        <p><a class="btn btn-secondary" href="#">Conoce más &raquo;</a></p>
+        <p><a class="btn btn-secondary boton-tipo-2" href="#">Conoce más &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle cicular-image-2" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><!--<rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>--></svg>
+        <a href="#" class="enlace-img-products"><svg class="bd-placeholder-img rounded-circle cicular-image-2" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><!--<rect width="100%" height="100%" fill="var(--bs-secondary-color)"/>--></svg></a>
         <h2 class="fw-normal">Anécdota</h2>
         <p class="p-content">Una Noche Buena, el postre preparado para el banquete del Duque se quemó en el horno.</p>
-        <p><a class="btn btn-secondary" href="#">Conoce más &raquo;</a></p>
+        <p><a class="btn btn-secondary boton-tipo-2" href="#">Conoce más &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="cicular-image-3" src="./assets/imgs/Circle-paneton-1.jpg" alt="">
-        <!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
+        <a href="#" class="enlace-img-products"><img class="cicular-image-3" src="./assets/imgs/Circle-paneton-1.jpg" alt="">
+          <!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>--></a>
         <h2 class="fw-normal">Nacimiento</h2>
         <p class="p-content">Un cocinero improvisó un pan dulce al cual se le llamó "Panne de Tonni" de donde proviene el nombre Panetón.</p>
-        <p><a class="btn btn-secondary" href="#">Conoce más &raquo;</a></p>
+        <p><a class="btn btn-secondary boton-tipo-2"  href="#">Conoce más &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -281,7 +281,7 @@
         <p class="lead p-article">El clásico panetón Donofrio con su aroma inigualable. Viene con 1 chocotoncito gratis. Conservar en lugar fresco y seco.</p>
       </div>
       <div class="col-md-5" >
-        <svg id="square-image-1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Panetón Donofrio tradicional.</title> <!--<rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text>--></svg>
+        <a href="#" class="enlace-img-products"><svg id="square-image-1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Panetón Donofrio tradicional.</title> <!--<rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text>--></svg></a>
       </div>
     </div>
 
@@ -293,7 +293,7 @@
         <p class="lead p-article">Nada mejor para acompañar una taza de chocolate que una tajada de Panetón Buonnatale. Conservar en lugar fresco y seco.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg id="square-image-2" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><!--<rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text>--></svg>
+        <a href="#" class="enlace-img-products"><svg id="square-image-2" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><!--<rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text>--></svg></a>
       </div>
     </div>
 
@@ -305,7 +305,7 @@
         <p class="lead p-article">Chocolate Bitter 40% Cacao con maní. ¡Prueba con una sonrisa!. Puede contener gluten y nueces de árbol.</p>
       </div>
       <div class="col-md-5">
-        <svg id="square-image-3" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><!--<rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text>--></svg>
+        <a href="#" class="enlace-img-products"><svg id="square-image-3" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><!--<rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text>--></svg></a>
       </div>
     </div>
 
@@ -321,7 +321,7 @@
   <!-- FOOTER -->
   <div class="footer-container">
     <footer class="container">
-      <p class="float-end"><a href="#">Back to top</a></p>
+      <p class="float-end"><a href="#" class="enlace-footer-back">Back to top</a></p>
       <p class="p-footer">&copy; 2017–2023 Company, Inc. &middot; <a href="#" class="enlace-footer">Privacy</a> &middot; <a href="#" class="enlace-footer">Terms</a></p>
     </footer>
   </div>
