--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
         <!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
-            <p class="p-carousel">Some representative placeholder content for the first slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary boton-tipo-1" href="#">Sign up today</a></p>
+            <h1>¡Vive la Navidad!</h1>
+            <p class="p-carousel">Encuentra tu panetón favorito en los principales supermercados.</p>
+            <p><a class="btn btn-lg btn-primary boton-tipo-1" href="#">Descubre tiendas</a></p>
           </div>
         </div>
       </div>
@@ -208,9 +208,9 @@
         <!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>Another example headline.</h1>
-            <p class="p-carousel">Some representative placeholder content for the second slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary boton-tipo-1" href="#">Learn more</a></p>
+            <h1>Compartir es lo mejor de la Navidad.</h1>
+            <p class="p-carousel">En el mes de Diciembre llegaremos a tu barrio para armar la chocolatada.</p>
+            <p><a class="btn btn-lg btn-primary boton-tipo-1" href="#">Mira el calendario </a></p>
           </div>
         </div>
       </div>
@@ -218,9 +218,9 @@
         <!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>-->
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>One more for good measure.</h1>
-            <p class="p-carousel">Some representative placeholder content for the third slide of this carousel.</p>
-            <p><a class="btn btn-lg btn-primary boton-tipo-1" href="#">Browse gallery</a></p>
+            <h1>Nuevos sabores disponibles.</h1>
+            <p class="p-carousel">¿Ya porbaste los nuevos sabores?. No te puedes perder este refrescante plan.</p>
+            <p><a class="btn btn-lg btn-primary boton-tipo-1" href="#">Pruébalo ya!</a></p>
           </div>
         </div>
       </div>
@@ -320,6 +320,7 @@
 
   <!-- FOOTER -->
   <div class="footer-container">
+    <img src="./assets/imgs/cinta-footer.jpg" alt="">
     <footer class="container">
       <p class="float-end"><a href="#" class="enlace-footer-back">Back to top</a></p>
       <p class="p-footer">&copy; 2017–2023 Company, Inc. &middot; <a href="#" class="enlace-footer">Privacy</a> &middot; <a href="#" class="enlace-footer">Terms</a></p>
